Added multiple pages

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Piyush Deshpande's Portfolio</title>
+    <title>Projects - Piyush Deshpande</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,20 +16,25 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <h1>Piyush Deshpande</h1>
-        <p>Master's Student in Computer and Information Technology</p>
     </header>
     
-    <section class="hero">
-        <h2>Welcome to My Portfolio</h2>
-        <p>Explore my projects, skills, and experiences.</p>
-        <a href="projects.html" class="btn">View Projects</a>
+    <section>
+        <h2>Projects</h2>
+        <ul>
+            <li>
+                <strong>License Plate Detection and Recognition</strong>
+                <p>Details about this project...</p>
+            </li>
+            <li>
+                <strong>Electromyography-based system</strong>
+                <p>Details about this project...</p>
+            </li>
+            <!-- Add more projects here -->
+        </ul>
     </section>
     
     <footer>
         <p>&copy; 2024 Piyush Deshpande</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
