--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <div class="nav-toggle">☰</div>
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
