--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
                             <!-- single work -->
                             <div class="col-md-6 col-sm-12  photography">
-                                <a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" data-content="content1"/>
+                                <a href= "#animatedModal" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" data-content="content1"/>
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Licence Plate Detection and Recognition with OCR using Machine Learning Techniques</span>  </div>
@@ -183,7 +183,7 @@
                             
                             <!-- single work -->
                             <div class="col-md-6 col-sm-12 logo">
-                                <a id="demo02" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" data-content="content2" />
+                                <a href = "https://github.com/piyushgd21/EMG" class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" data-content="content2" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>An Electromyography-based system for Sitting and Walking Postures</span> </div>
@@ -195,7 +195,7 @@
                             
                             <!-- single work -->
                             <div class="col-md-6 col-sm-12 graphics">
-                                <a id="demo03" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/02.jpg" alt="image" class="img-responsive" data-content="content3" />
+                                <a href="https://github.com/piyushgd21/StaircaseDetection" class="portfolio_item"> <img src="img/portfolio/02.jpg" alt="image" class="img-responsive" data-content="content3" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Computer Vision-based Staircase Detection for Safe Mobility of Visually Impaired People</span> </div>
