--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
                             <!-- single work -->
                             <div class="col-md-6 col-sm-12  photography">
-                                <a href= "#animatedModal" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" data-content="content1"/>
+                                <a href= "https://github.com/MonishaGGowda/DocuSenseBackend" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" data-content="content1"/>
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Licence Plate Detection and Recognition with OCR using Machine Learning Techniques</span>  </div>
+                                            <div class="item_info"> <span>Collaborative Crime Intelligence Web Application</span>  </div>
                                         </div>
                                     </div>
                                 </a>
@@ -218,7 +218,7 @@
                             <!-- end single work -->
                             
                             <!-- single work -->
-                            <div class="col-md-6 col-sm-12 fashion">
+                            <!-- <div class="col-md-6 col-sm-12 fashion">
                                 <a id="demo05" href="#animatedModal" class="portfolio_item" data-content = "content4"> <img src="img/portfolio/05.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
@@ -226,7 +226,7 @@
                                         </div>
                                     </div>
                                 </a>
-                            </div>
+                            </div> -->
                             <!-- end single work -->
                             
                             <!-- single work -->
@@ -301,7 +301,7 @@
                 <!-- <h3>Phone Number</h3>
                 <p>+91 7719942357</p> -->
                 <h3> Mobile Number</h3>
-                <p>+91 7719942357</p>
+                <p>+1 (765)775-7562</p>
                 <h3>Email</h3>
                 <p>piyushgd21@gmail.com </p>
                 <p>deshpa74@purdue.edu</p>
