changed the icon

--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
                             <nav class="categories">
                                 <ul class="portfolio_filter">
                                     <li><a href="" class="active" data-filter="*">All</a></li>
-                                    <li><a href="" data-filter=".photography">LPDR</a></li>
+                                    <li><a href="" data-filter=".photography">DocuSense</a></li>
                                     <li><a href="" data-filter=".logo">EMG Device</a></li>
                                     <li><a href="" data-filter=".graphics">Staircase Detection</a></li>
-                                    <li><a href="" data-filter=".fashion">Locality Analyzer</a></li>
+                                    <!-- <li><a href="" data-filter=".fashion">Locality Analyzer</a></li> -->
                                 </ul>
                             </nav>
                         </div>
@@ -171,7 +171,7 @@
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
                             <!-- single work -->
                             <div class="col-md-6 col-sm-12  photography">
-                                <a href= "https://github.com/MonishaGGowda/DocuSenseBackend" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" data-content="content1"/>
+                                <a href= "https://github.com/MonishaGGowda/DocuSenseBackend" class="portfolio_item"> <img src="img/portfolio/01.png" alt="image" class="img-responsive" data-content="content1"/>
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
                                             <div class="item_info"> <span>Collaborative Crime Intelligence Web Application</span>  </div>
